tests/baselines/reference/unusedTypeParameterInMethod1(strict=true).errors.txt
unusedTypeParameterInMethod1.ts(2,15): error TS6133: 'X' is declared but its value is never read.
unusedTypeParameterInMethod1.ts(5,9): error TS2454: Variable 'a' is used before being assigned.
unusedTypeParameterInMethod1.ts(6,9): error TS2454: Variable 'b' is used before being assigned.


==== unusedTypeParameterInMethod1.ts (3 errors) ====
    class A {
        public f1<X, Y, Z>() {
                  ~
!!! error TS6133: 'X' is declared but its value is never read.
            var a: Y;
            var b: Z;
            a;
            ~
!!! error TS2454: Variable 'a' is used before being assigned.
            b;
            ~
!!! error TS2454: Variable 'b' is used before being assigned.
        }
    }